// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin/users form 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "loading": true,
        "method": "get",
        "url": "/api/admin/users/defaults",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {
        "reject": [Function],
        "resolve": [Function],
      },
    },
  ],
}
`;

exports[`admin/users form 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "loading": true,
        "method": "get",
        "url": "/api/admin/users/defaults",
      },
    ],
    Array [
      Object {
        "data": Object {
          "isMobileVerified": true,
          "mobile": "13800138000",
          "name": "新名称",
        },
        "loading": true,
        "method": "POST",
        "url": "/api/admin/users",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {
        "reject": [Function],
        "resolve": [Function],
      },
    },
    Object {
      "type": "return",
      "value": Promise {
        "reject": [Function],
        "resolve": [Function],
      },
    },
  ],
}
`;
